Final working backend code :):

--- a/Pairprogramming/public/stylesheets/style.css
+++ b/Pairprogramming/public/stylesheets/style.css
@@ -219,3 +219,7 @@ body.loading .modal {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  #stacktrace-wrapper{
+      color:red;
+  }
