--- a/Pairprogramming/views/home.ejs
+++ b/Pairprogramming/views/home.ejs
@@ -44,11 +44,14 @@
                 <div>Oppentents Result Output</div>
                 <div class = "whitespace" id="opponentsResult"></div>
             </div>
-            <div id="stacktrace" class = "whitespace"></div>
+        </div>
+        <div id="stacktrace-wrapper">
+                <div id="stacktrace" class = "whitespace"></div>
+                <div id="errordescription" class="whitespace"></div>
         </div>
         <div class="modal"><!-- Place at bottom of page --></div>
 
-<<!-- The Modal -->
+<!-- The Modal -->
 <div id="myModal" class="modalpopup">
 
         <!-- Modal content -->
@@ -79,7 +82,7 @@
             $("#clockdiv").hide();
             $("#opponentsResult").hide();
             $("#result").hide();
-            $("#stacktrace").hide();
+            $("#stacktrace-wrapper").hide();
             $("#cancelMatch").hide();
             $('.loader').hide();
             var data = {
@@ -193,6 +196,12 @@
                 });
 
                 socket.on('challengeCancelled', function(response){
+                        if(confirm('Do you want to keep your friends code?')){
+
+                        }else{
+                            editor2.setValue('');
+                        }
+                        console.log('cancel event received');
                         $("#clockdiv").hide();
                         $("#cancelMatch").hide();
                         var filterVal = 'blur(0px)';
@@ -274,10 +283,28 @@
                     socket.emit('challengeRejected',{opponentSocketID:socket.id});
         } 
         function challengeAccepted(){
+                        console.log('length my code'+editor.getValue().length);
+                        if(editor.getValue().length != 0){
+                            if(confirm('Do you want to keep your current code?')){
+
+                            }else{
+                                editor.setValue('');
+                            }
+                        }
                         socket.emit('challengeAccepted',{opponentSocketID:socket.id});
         }
 
         function cancelChallenge(){
+                console.log('length friend code'+editor2.getValue().length);
+                    if(editor2.getValue().length != 0){
+
+                   
+                        if(confirm('Do you want to keep your friends code?')){
+
+                        }else{
+                            editor2.setValue('');
+                        }
+                    }
                         $("#clockdiv").hide();
                         $("#cancelMatch").hide();
                         var filterVal = 'blur(0px)';
@@ -288,7 +315,7 @@
                         .css('oFilter',filterVal)
                         .css('msFilter',filterVal);
                         $('#clockdiv').attr('data-inMatch', 'false');
-                        socket.emit('cancleChallenge',{mySocketID:socket.id});
+                        socket.emit('cancelChallenge',{mySocketID:socket.id});
         }
 
        function compile(){
@@ -316,8 +343,16 @@
         function getCompileData(data)  {
             $('.loader').hide();
             console.log(data)
-            $('#status').text(data.compileData.status);
-            $('#youroutput').text(data.compileData.result);
+            if(data.compileData.statusid == '1'){
+                $('#status').text(data.compileData.status);
+                $('#youroutput').text(data.compileData.result);
+            }else{
+                $('#result-wrapper').hide();
+                $('#stacktrace-wrapper').show();
+                $('#stacktrace').text(data.compileData.stderr);
+                $('#errorDescription').text(data.compileData.stderr);
+            }
+            
         }
 
         function submit(){
